--- a/difftest/.gitignore
+++ b/difftest/.gitignore
@@ -1,9 +1,10 @@
+/bug-report.sh
+/CLSmith
+/expected-output.txt
+/kernel.cl
+/nvidia-bug-report.log.gz
+/reproduced-output.txt
+/stderr.txt
+/stdout.txt
 __pycache__
 platform.info
-/actual-output.txt
-/expected-output.txt
-/reproduced-output.txt
-/nvidia-bug-report.log.gz
-/bug-report.sh
-/kernel.cl
-/CLSmith
