--- a/lib/llvm/Makefile
+++ b/lib/llvm/Makefile
@@ -1,4 +1,3 @@
-
 build/3.8.0/bin/clang:
 	wget http://releases.llvm.org/3.8.0/clang+llvm-3.8.0-x86_64-linux-gnu-ubuntu-16.04.tar.xz
 	tar xf clang+llvm-3.8.0-x86_64-linux-gnu-ubuntu-16.04.tar.xz
@@ -22,3 +21,7 @@ build/3.6.0/bin/clang:
 	tar xf clang+llvm-3.6.0-x86_64-linux-gnu-ubuntu-14.04.tar.xz
 	mv clang+llvm-3.6.0-x86_64-linux-gnu build/3.6.0
 	rm clang+llvm-3.6.0-x86_64-linux-gnu-ubuntu-14.04.tar.xz
+
+.PHONY: clean
+clean:
+	rm -rf build/*
