Install llvm and trash the source / build dirs

--- a/.gitignore
+++ b/.gitignore
@@ -18,13 +18,7 @@ __pycache__
 /dist/*
 /dsmith/opencl/opencl_pb2.py
 /lib/cmake/*
-/lib/llvm/3.6.2/*
-/lib/llvm/3.7.1/*
-/lib/llvm/3.8.1/*
-/lib/llvm/3.9.1/*
-/lib/llvm/4.0.1/*
-/lib/llvm/5.0.0/*
-/lib/llvm/trunk/*
+/lib/llvm/*
 /lib/ninja/*
 
 # runtime files
