--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,6 @@
-[submodule "lib/CLSmith"]
-	path = lib/clsmith
-	url = https://github.com/ChrisCummins/CLSmith.git
-[submodule "lib/clreduce"]
-	path = lib/clreduce
-	url = git@github.com:ChrisCummins/clreduce.git
-[submodule "lib/clgen"]
-	path = lib/clgen
-	url = git@github.com:ChrisCummins/clgen.git
+[submodule "lib/-f"]
+	path = lib/-f
+	url = https://github.com/ChrisCummins/cldrive.git
+[submodule "lib/cldrive"]
+	path = lib/cldrive
+	url = https://github.com/ChrisCummins/cldrive.git
