--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ before_install:
 script:
   - sudo apt-get install -y tmux
   - dpkg -s 'tmux'
+  - dpks -s 'notapackage'
   - ./configure --exclude AppStore
   - ./run --verbose Git
   - ./run --verbose Unzip
