--- a/.gitignore
+++ b/.gitignore
@@ -14,13 +14,13 @@ __pycache__
 /build/bdist.*
 /build/dsmith
 /build/ipython/kernels/dsmith/kernel.json
-/build/lib/*
+/build/third_party/*
 /dist/*
 /dsmith/opencl/opencl_pb2.py
-/lib/cmake/*
-/lib/glsl/*
-/lib/llvm/*
-/lib/ninja/*
+/third_party/cmake/*
+/third_party/glsl/*
+/third_party/llvm/*
+/third_party/ninja/*
 
 # runtime files
 .ipynb_checkpoints
