--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,6 @@
 /requirements.txt
 
 # build files
-__pycache__
 /*.egg-info/*
 /.cache/*
 /build/bdist.*
@@ -17,11 +16,14 @@ __pycache__
 /build/lib/*
 /build/third_party/*
 /dist/*
+/dsmith/dsmith_pb2.py
+/dsmith/dsmith_pb2_grpc.py
 /dsmith/opencl/opencl_pb2.py
 /third_party/cmake/*
 /third_party/glsl/*
 /third_party/llvm/*
 /third_party/ninja/*
+__pycache__
 
 # runtime files
 .ipynb_checkpoints
