Cache keywords and linter errors.
This adds two sqlite databases in //.cache/keywords.db and //.cache/errors.db
which cache lightroom keywords on files and linter errors from directories
respectively.

Combined, these two caches work to amortize the costs of linting, such that a
second run on a 2TB photolib completes in under 4 seconds:

  $ bazel run //photolib:photolint -- --workspace=/Volumes/photos --counts --profile
  extension/bad = 3, file/name = 1, keywords/events = 6359, keywords/panorama = 22
  linting=0.000s, cached=2.967s, overhead=0.294s, total=3.261s

--- a/photolib/BUILD
+++ b/photolib/BUILD
@@ -2,7 +2,9 @@ py_binary(
     name = "photolint",
     srcs = ["photolint.py"],
     default_python_version = "PY3",
+    srcs_version = "PY3",
     deps = [
+        ":lintercache",
         ":linters",
         ":util",
         ":workspace",
@@ -12,7 +14,18 @@ py_binary(
 py_library(
     name = "workspace",
     srcs = ["workspace.py"],
+    srcs_version = "PY3",
     deps = [
+        ":util",
+    ],
+)
+
+py_library(
+    name = "lintercache",
+    srcs = ["lintercache.py"],
+    srcs_version = "PY3",
+    deps = [
+        ":linters",
         ":util",
     ],
 )
@@ -20,11 +33,16 @@ py_library(
 py_library(
     name = "lightroom",
     srcs = ["lightroom.py"],
+    srcs_version = "PY3",
+    deps = [
+        ":util",
+    ],
 )
 
 py_library(
     name = "linters",
     srcs = ["linters.py"],
+    srcs_version = "PY3",
     deps = [
         ":lightroom",
         ":util",
@@ -34,6 +52,7 @@ py_library(
 py_library(
     name = "util",
     srcs = ["util.py"],
+    srcs_version = "PY3",
 )
 
 py_test(
@@ -41,6 +60,7 @@ py_test(
     size = "small",
     srcs = ["tests/linters_test.py"],
     default_python_version = "PY3",
+    srcs_version = "PY3",
     deps = [
         ":linters",
     ],
@@ -51,6 +71,7 @@ py_test(
     size = "small",
     srcs = ["tests/workspace_test.py"],
     default_python_version = "PY3",
+    srcs_version = "PY3",
     deps = [
         ":workspace",
     ],
