--- a/tools/bazel.rc
+++ b/tools/bazel.rc
@@ -1,1 +1,3 @@
 test --verbose_failures --test_output=errors --test_verbose_timeout_warnings
+test --python_top=//:python3.6
+run --python_top=//:python3.6
