Rename 'build' directory to 'tools'.

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 #!/usr/bin/env bash
-venv="build/dsmith"
+venv="venv/dsmith"
 [ -f "$venv/bin/activate" ] && [ -z "$VIRTUAL_ENV" ] && source "$venv/bin/activate"
 
 # Additional tools in PATH
