--- a/tools/bazel.rc
+++ b/tools/bazel.rc
@@ -1,18 +1,26 @@
 # See: https://bazel.build/versions/master/docs/bazel-user-manual.html#flag--compilation_mode
 
+build --python_top=//:python3.6
+test --python_top=//:python3.6
+run --python_top=//:python3.6
+
+# Build and test options:
+build --verbose_failures
+test --verbose_failures
+
+build --copt='-Wno-unused-command-line-argument'
+test --copt='-Wno-unused-command-line-argument'
+
+build --cxxopt='-std=c++14'
+test --cxxopt='-std=c++14'
+
+build --cxxopt='-Wc++1z-extensions'
+test --cxxopt='-Wc++1z-extensions'
+
 # Build options:
 build --compilation_mode opt
-build --cxxopt='-std=c++14'
-build --cxxopt='-Wc++1z-extensions'
-build --cxxopt='-Wno-unused-command-line-argument'
 build --ignore_unsupported_sandboxing
-build --verbose_failures
 
 # Test options:
-test --genrule_strategy=standalone
-test --sandbox_debug
-test --spawn_strategy=standalone
 test --test_output=errors
-test --test_strategy=standalone
 test --test_verbose_timeout_warnings
-test --verbose_failures
