--- a/learn/ml/BUILD
+++ b/learn/ml/BUILD
@@ -1,7 +1,10 @@
+load("@requirements//:requirements.bzl", "requirement")
+
 py_test(
     name = 'batch_linear_regression',
     srcs = ['batch_linear_regression.py'],
-    srcs_version = 'PY3',
-    default_python_version = 'PY3',
     size = 'small',
+    deps = [
+        requirement("absl-py"),
+    ]
 )
